--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "scikit-learn>=1.5.1",
     "ipykernel>=6.29.5",
     "toml>=0.10.2",
+    "python-dotenv>=1.0.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
